@@ -1,6 +1,7 @@
 <?php
 $events = array();
 
+
 $event_name = 'OnModMonitorPrepareRequestQuery';
 $event = $modx->newObject('modEvent', array(
   'service'   => 1,
@@ -10,5 +11,28 @@ $event->set('name', "{$event_name}");
 $events[] = $event;
 
 unset($event,$event_name);
+
+
+$event_name = 'OnModmonitorRequestBeforeSave';
+$event = $modx->newObject('modEvent', array(
+  'service'   => 1,
+  'groupname' => PKG_NAME,
+)); 
+$event->set('name', "{$event_name}");
+$events[] = $event;
+
+unset($event,$event_name);
+
+
+$event_name = 'OnModmonitorRequestSave';
+$event = $modx->newObject('modEvent', array(
+  'service'   => 1,
+  'groupname' => PKG_NAME,
+)); 
+$event->set('name', "{$event_name}");
+$events[] = $event;
+
+unset($event,$event_name);
+
 
 return $events;
