@@ -1,3 +1,8 @@
+modMonitor-2.6.7-beta
+================================
+- Added plugin events OnModmonitorRequestBeforeSave and OnModmonitorRequestSave
+
+
 modMonitor-2.6.6-beta
 ================================
 - Minor bugfix
